Made interface for the list of parameters