@@ -2,6 +2,7 @@ package uni.nikdiu.timelineweb.convectors;
 
 
 import org.springframework.stereotype.Component;
+import uni.nikdiu.timelineweb.dtos.FunctionDto;
 import uni.nikdiu.timelineweb.dtos.ParameterDto;
 import uni.nikdiu.timelineweb.entities.Parameter;
 
@@ -11,11 +12,11 @@ import java.util.stream.Collectors;
 @Component
 public class ParameterConvector {
     public ParameterDto toDto(Parameter parameter){
-        List<String> functionExpression = parameter.getFunctions().stream()
-                .map(function -> function.getStringExpression())
-                .collect(Collectors.toList());
+        FunctionConvector functionConvector = new FunctionConvector();
+        List<FunctionDto> functions = parameter.getFunctions().stream()
+                .map(function -> functionConvector.toDto(function)).toList();
 
-        return new ParameterDto(parameter.getId(), parameter.getName(), parameter.getDescription(), parameter.getAbbreviation(), functionExpression);
+        return new ParameterDto(parameter.getId(), parameter.getName(), parameter.getDescription(), parameter.getAbbreviation(), functions);
     }
 
 }
